layout bug fixes

--- a/budgetai/src/App.css
+++ b/budgetai/src/App.css
@@ -41,6 +41,14 @@ body{
   background-color: #212121;
   color: white;
 }
+h2{
+  color: white;
+  font-size: 40px;
+  line-height: 1.2em;
+  letter-spacing: -1.7px;
+  font-weight: 400;
+  margin: 0px;
+}
 
 /* Charts */
 .net-worth-container{
@@ -301,9 +309,42 @@ input[type="checkbox"]:checked ~ .mobile-nav svg{
 
 .page-exit {
   opacity: 0;
+  transform: translateY(0vh);
 }
 
 .page-exit-active {
+  opacity: 0;
+  transform: translateY(10vh);
+  transition: opacity .4s, transform .4s;
+}
+
+/*Stats Page*/
+.stats-title{
+  z-index: 3;
+  display: flex;
+  flex-direction: row;
+  position: fixed;
+  max-width: 275px;
+  height: 70px;
+  align-items: center;
+  flex-wrap: wrap;
+  top: 0px;
+  color: #46C2CB;
+  padding: 0px 5px;
+}
+.stats-title-background{
+  background: linear-gradient(to bottom, rgba(10,10,10,.8) 20%, transparent 100%);
+  width: 100%;
+  height: 70px;
+  position: fixed;
+  top: 0px;
+  opacity: 1;
+  transition: opacity .4s;
+  backdrop-filter: blur(2px);
+  z-index: 1;
+}
+.spending-summary{
+  margin-top: 70px;
 }
  
 
